REGRESSION(r116487?): HTMLFormElement::elements['name'] is empty if the form is detached from the document tree https://bugs.webkit.org/show_bug.cgi?id=88632

Patch by Rakesh KN <rakesh.kn@motorola.com> on 2012-06-08
Reviewed by Ryosuke Niwa.

Source/WebCore:

Update root node of RadioNodeList when the form element is detached from dom tree.

Test: fast/forms/radionodelist-whose-form-element-detached-from-domtree.html

* dom/Node.cpp:
(WebCore::Node::resetCachedRadioNodeListRootNode):
New function to update the root node of RadioNodeLists to form element from document.
* dom/Node.h: Ditto.
* html/HTMLFormElement.cpp:
(WebCore::HTMLFormElement::removedFrom):
On detach, we update the root node of all RadioNodeLists of this form element.
* html/RadioNodeList.cpp:
(WebCore::RadioNodeList::setRootElement):
Setter for updating root node.
* html/RadioNodeList.h:
(RadioNodeList): Ditto.

LayoutTests:

* fast/forms/radionodelist-whose-form-element-detached-from-domtree-expected.txt: Added.
* fast/forms/radionodelist-whose-form-element-detached-from-domtree.html: Added.

Canonical link: https://commits.webkit.org/106527@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119891 268f45cc-cd09-0410-ab3c-d52691b4dbfc